Fixing FindBugs Error.
svn path=/trunk/; revision=45957


Former-commit-id: aebd673e6879864f126ea74a9ba04a6873400822